# Muzak-Bot

./: .gitignore  Dockerfile  README.md  compose.yaml  deployment.yaml  pyproject.toml
muzak/: bot.py  main.py  settings.py
muzak/cogs/: general_cog.py  music_cog.py
muzak/utils/: audio_player.py  embed_utils.py  logger.py
